# large-battles-web

./: .gitignore  CMakeLists.txt  README.md  build.sh  calc_size.py  deploy.sh  deploy_client.sh  game_engine.js  process_html.py
client/: game.html  interface.js  types.js
cpp_module/: array_view.hpp  compile.sh  coords.hpp  process_prob_map.cpp  test_compile.sh
database_servers/: requirements.txt  run_server.py
database_servers/minhttp/: __init__.py  public_main.py  schema.py
docs/: index.html  rules.md
game_records/: fixed_large_record.json  second_large_record.json
layerd_images/: armory.piskel  farm.piskel
modules/: client_main.js  connection_server.js  htmlify.js  learn_client.js  main.js  package-lock.json  package.json  server_main.js  test_player_coord_server.js  train_batch_generator.js  web_worker_main.js
modules/browser_only/: analysis.js  analysis_ui.js  archive_page.js  display_board.js  game_page.js  get_server_info.js  init_ai.js  live_connections_page.js  load_images.js  local_player.js  multiplayer.js  nav_signal.js  page_navigation.js  player_utils.js  rankings_page.js  signup_login.js  single_player.js  single_player_interface.js  train_interface_page.js  url_info.js
modules/browser_only/game_display/: base_component.js  canvas_interface.js  change_script.js  global_signals.js  info_display.js  interaction_components.js  script_interface.js
modules/logic_modules/: ai_interface.js  array_nd.js  base_ops.js  consume_instructions.js  coord_engine.js  coord_lib.js  create_utils.js  decompose_instructions.js  exec_instructions.js  game_engine.js  game_request_status.js  game_state.js  init_game.js  pathing.js  process_instruction.js  random_helpers.js  record_accessor.js  to_binary.js  types.js  validate_instruction.js  wrap_fns.js
modules/logic_modules/ai_interface/: ai_utils.js  instr_to_binary.js  learn_utils.js  main_ai_inter.js  major_coord_learner.js  minor_coord_learner.js  sample_move.js  state_comparitor.js  to_binary.js  type_utils.js
modules/logic_modules/test/: arraynd_test.js  binary_test.js  coord_eng_test.js  instr_to_binary_test.js  validate_attack_tests.js  validate_build_test.js  validate_create_tests.js  validate_move_tests.js  validate_tests.js
modules/server_only/: game_request_status.js
old_js_code/: .gitignore  process_html.py  run_all_servers.sh
old_js_code/database_servers/: create_test_db.py  requirements.txt
old_js_code/database_servers/minhttp/: __init__.py
old_js_code/modules/: connection_server.js  server_main.js
old_js_code/modules/browser_only/: analysis.js  archive_page.js  display_board.js  page_navigation.js  url_info.js  (+4 more)
old_js_code/static_files/: template.tmpl
old_js_code/tf_learner/: generate_all_data.py  json_to_npy.py
player_coord/: turnserver_install.md
player_coord/client/: client.html  get_server_info.js  simplepeer.min.js
player_coord/server/: server.py
player_coord/test/: bundle.js  index.html
player_coord_server/: client_server.py  server_setup.sh
player_coord_server/main_page_server/: README.md  admin_run_server.py  create_test_db.py  init_db.py  requirements.txt  run_server.py
src/: consume_move.cpp  decompose_move.cpp  decomposed_move.hpp  default_stats.cpp  game.hpp  game_utils.cpp  game_utils.hpp  gamemove.hpp  genetic_movefinding.cpp  gui.cpp  make_move.cpp  movefinding.hpp  pathing.cpp  pathing.hpp  sdl_wrapper.cpp  sdl_wrapper.h  stats.hpp  test_main.cpp  unit.h  validate.cpp
src/helpers/: RangeIterator.h  point.hpp  two_d_array.h
static_files/: default_data.json  default_layout.json  default_lib.js  htmlify.js  index.html  process_html.py  style.css  template.tmpl  wasm_static_loader.js
static_files/layerd_images/: barracks.piskel
tf_learner/: convert_model.sh  data_generator.py  gen_data.sh  generate_all_data.py  json_to_npy.py  major_coord_learner.py  state_compare_learner.py  tf_websocket_server.py
toy_client/: client.js  index.html
toy_client2/: client.js
web-workers/: demo_workers.js  index.html  main.js
(+24 files in other folders)
